fix bug where multi-line announcements would break the planner in fun and entertaining ways

--- a/app/planner/PlannerPage.styl
+++ b/app/planner/PlannerPage.styl
@@ -2,6 +2,9 @@
 	.dateHeader
 		margin-bottom: 12px
 
+	.plannerHeader.plannerHeaderFirst
+		border-bottom: none
+
 	.plannerHeader
 		border-bottom: solid 1px black
 		display: flex
@@ -11,21 +14,21 @@
 			flex: 1
 			text-align: center
 
-			.plannerHeaderDay
-				padding-bottom: 0.5rem
+		.plannerHeaderDay
+			padding-bottom: 0.5rem
 
-				.plannerHeaderDayOfWeek
-					font-size: 1.2rem
+			.plannerHeaderDayOfWeek
+				font-size: 1.2rem
 
-				.plannerHeaderDate
-					font-size: 1.4rem
-					padding-left: 0.25rem
+			.plannerHeaderDate
+				font-size: 1.4rem
+				padding-left: 0.25rem
 
-			.plannerHeaderAnnouncement
-				border-top: solid 1px black
-				border-right: solid 1px black
-				font-weight: bold
-				min-height: 2rem
+		.plannerHeaderAnnouncement
+			border-top: solid 1px black
+			border-right: solid 1px black
+			font-weight: bold
+			min-height: 2rem
 
-			.plannerHeaderAnnouncementFirst
-				border-left: solid 1px black
+		.plannerHeaderAnnouncementFirst
+			border-left: solid 1px black
